--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "exceljs": "^4.4.0",
         "express": "^5.1.0",
         "multer": "^2.0.1",
+        "multer-s3": "^3.0.1",
         "mysql2": "^3.14.2",
         "xlsx": "^0.18.5"
     }
