--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "multer": "^2.0.1",
         "multer-s3": "^3.0.1",
         "mysql2": "^3.14.2",
+        "pdf-lib": "^1.17.1",
         "xlsx": "^0.18.5"
     }
 }
